feat: added improvments

--- a/src/components/dashboard/style.css
+++ b/src/components/dashboard/style.css
@@ -1,6 +1,6 @@
 #banner {
   margin-top: 12px;
-  /* background-color: #e6ccff; */
+  background-color: #e6ccff;
   padding: 24px;
   text-align: center;
 }
